--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,20 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
-  "keywords": ["gigflow", "node", "express", "mongodb"],
+  "keywords": [
+    "gigflow",
+    "node",
+    "express",
+    "mongodb"
+  ],
   "author": "Arvind Singh",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.19.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "cookie-parser": "^1.4.7"
+    "express": "^4.19.2",
+    "mongoose": "^9.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
