--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "author": "Arvind Singh",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
